--- a/loader/monthlogodesign.index.html
+++ b/loader/monthlogodesign.index.html
@@ -1,9 +1,10 @@
 <style>
 img.loader-logo-image {
+  margin-left: 100px;
   width: 135px;
   height: 135px;
   filter: drop-shadow(1px -1px 5px #FFD700) 
 }
 </style>
-
+<body scroll="no" style="overflow: hidden">
 <img src="https://github.com/Hilfig3rStorage/Images/blob/main/newyearslogo.png?raw=true" class="loader-logo-image"></img>
