--- a/tgc/src/storage/bitlife.index.html
+++ b/tgc/src/storage/bitlife.index.html
@@ -1,4 +1,6 @@
-  <!-- Main Loader CSS -->
+ <script src="https://raw.githubusercontent.com/Hilfig3rStorage/tgcstorage/main/js/enbed.js"></script>
+ 
+ <!-- Main Loader CSS -->
 <link rel="stylesheet" href="https://hilfig3rstorage.github.io/tgcstorage/css/loadercss.css" />
          
   <!-- Loader -->
